--- a/depot/app/views/carts/show.html.erb
+++ b/depot/app/views/carts/show.html.erb
@@ -1,16 +1,30 @@
+<article>
 <% if notice %>
   <aside id="notice"><%= notice %></aside>
 <% end %>
 
-<h2>Your pragmatic cart</h2>
+<h2>Your cart</h2>
 
-<ul>
-  <% @cart.line_items.each do |item| %>
-  <li><%= item.product.title %></li>
+<table>
+  <% @cart.line_items.each do |line_item| %>
+    <tr>
+      <td class="quantity"><%= item.quantity %></td>
+      <td><%= item.product.title %></td>
+      <td class="price"><%= number_to_currency(line_item.total_price) %></td>
+    </tr>
   <% end %>
-</ul>
+    <tfoot>
+      <tr>
+        <th colspan="2">Total:</th>
+        <td class="price"><%= number_to_currency(@cart.total_price) %></td>
+      </tr>
+    </tfoot>
+</table>
+<%= button_to 'Empty Cart', @cart,
+              method: :delete,
+              data: {confirm: 'Are you sure?'}%>
 
-
+</article>
 
 <!--<p id="notice"><%#= notice %></p>-->
 
