--- a/depot/app/views/store/index.html.erb
+++ b/depot/app/views/store/index.html.erb
@@ -3,13 +3,14 @@
 <% end %>
 
 <h1>Your pragmatic Catalog</h1>
+
 <ul class="catalog">
   <% cache @products do %>
     <% @products.each do |product| %>
       <% cache product do %>
         <li>
           <%= image_tag(product.image_url) %>
-          <h2><% product.title %></h2>
+          <h2><%= product.title %></h2>
           <p>
           <%= sanitize(product.description) %>
           </p>
