--- a/depot/app/views/carts/show.html.erb
+++ b/depot/app/views/carts/show.html.erb
@@ -8,11 +8,12 @@
 <table>
   <% @cart.line_items.each do |line_item| %>
     <tr>
-      <td class="quantity"><%= item.quantity %></td>
-      <td><%= item.product.title %></td>
+      <td class="quantity"><%= line_item.quantity %></td>
+      <td><%= line_item.product.title %></td>
       <td class="price"><%= number_to_currency(line_item.total_price) %></td>
     </tr>
   <% end %>
+  <%#= render(@cart.line_items) %>
     <tfoot>
       <tr>
         <th colspan="2">Total:</th>
@@ -26,7 +27,6 @@
 
 </article>
 
-<!--<p id="notice"><%#= notice %></p>-->
 
 <!--<%#= link_to 'Edit', edit_cart_path(@cart) %> |-->
 <%#= link_to 'Back', carts_path %>
