--- a/depot/app/assets/stylesheets/application.scss
+++ b/depot/app/assets/stylesheets/application.scss
@@ -61,6 +61,9 @@ header.main{
       @media (min-widt: 30em) {
         padding-right: 1em;
       }
+      .hour {
+        color: white;
+      }
 
       li {
         margin: 0;
