--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -16,10 +16,12 @@
     <section class="content">
       <nav class="side_nav">
         <ul>
+
           <li><a href="/">Home</a></li>
           <li><a href="/questions">Questions</a></li>
           <li><a href="/news">News</a></li>
           <li><a href="/contact">Contact</a></li>
+          <li class="hour"><%=  0.hour.from_now.localtime %></li>
         </ul>
       </nav>
       <main class='<%= controller.controller_name %>'>
